--- a/Head/start.html
+++ b/Head/start.html
@@ -7,6 +7,11 @@
       content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
     />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <meta property="og:title" content="Html Lesson" />
+    <meta property="og:author" content="Joele-E" />
+    <meta property="og:type" content="website" />
+    <meta property="og:description" content="Short Html lesson exercise" />
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
     <title>HTML lesson</title>
   </head>
   <body></body>
