--- a/Attributes/start.html
+++ b/Attributes/start.html
@@ -9,5 +9,23 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>HTML Lesson</title>
   </head>
-  <body></body>
+  <body>
+    <button disabled>Click me</button>
+    <hr />
+    <label for="myNumber">Number 0-100: </label>
+    <input
+      type="number"
+      name="myNumber"
+      step="2"
+      placeholder="0-100"
+      min="0"
+      max="100"
+      autofocus
+    />
+    <hr />
+    <input type="checkbox" name="myCheckbox" checked />
+    <label for="myCheckbox">Check me</label>
+    <hr />
+    <input type="date" name="myDate">
+  </body>
 </html>
