--- a/Table/start.html
+++ b/Table/start.html
@@ -9,5 +9,84 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>HTML Lesson</title>
   </head>
-  <body></body>
+  <body>
+    <table border="10">
+      <thead align="center">
+      <tr>
+        <th>Title</th>
+        <th>Cash entries</th>
+        <th>Cash outflows</th>
+      </tr>
+    </thead>
+    <tbody align="center">
+      <tr>
+        <td>January</td>
+        <td>100</td>
+        <td>90</td>
+      </tr>
+      <tr>
+        <td>February</td>
+        <td>200</td>
+        <td>80</td>
+      </tr>
+      <tr>
+        <td>March</td>
+        <td>300</td>
+        <td>70</td>
+      </tr>
+      <tr>
+        <td>April</td>
+        <td>400</td>
+        <td>60</td>
+      </tr>
+      <tr>
+        <td>May</td>
+        <td>100</td>
+        <td>50</td>
+      </tr>
+      <tr>
+        <td>June</td>
+        <td>100</td>
+        <td>40</td>
+      </tr>
+      <tr>
+        <td>July</td>
+        <td>100</td>
+        <td>30</td>
+      </tr>
+      <tr>
+        <td>August</td>
+        <td>100</td>
+        <td>20</td>
+      </tr>
+      <tr>
+        <td>September</td>
+        <td>100</td>
+        <td>10</td>
+      </tr>
+      <tr>
+        <td>October</td>
+        <td>100</td>
+        <td>20</td>
+      </tr>
+      <tr>
+        <td>November</td>
+        <td>100</td>
+        <td>30</td>
+      </tr>
+      <tr>
+        <td>December</td>
+        <td>100</td>
+        <td>40</td>
+      </tr>
+    </tbody>
+    <tfoot align="center">
+      <tr>
+        <td><b>Total</b></td>
+        <td><b>1800</b></td>
+        <td><b>540</b></td>
+      </tr>
+    </tfoot>
+    </table>
+  </body>
 </html>
