--- a/Attributes/start.html
+++ b/Attributes/start.html
@@ -10,6 +10,7 @@
     <title>HTML Lesson</title>
   </head>
   <body>
+    <form>
     <button disabled>Click me</button>
     <hr />
     <label for="myNumber">Number 0-100: </label>
@@ -27,5 +28,6 @@
     <label for="myCheckbox">Check me</label>
     <hr />
     <input type="date" name="myDate">
+  </form>
   </body>
 </html>
