added tel pattern

--- a/Form/start.html
+++ b/Form/start.html
@@ -30,7 +30,7 @@
       <label for="myDob">Date of birth: </label>
       <input type="date" name="myDob" />
       <label for="myTnum">Telephone number: </label>
-      <input type="tel" name="mytnum" />
+      <input type="tel" name="mytnum" pattern="[0-9]{3}-[0-9]{2}-[0-9]{3}"/>
     </fieldset>
     <fieldset>
       <legend>Plan selection</legend>
