--- a/Form/start.html
+++ b/Form/start.html
@@ -36,10 +36,13 @@
       <legend>Plan selection</legend>
       <label for="myPlanSelection">Subscription plan: </label>
       <select name="myPlanSelection">
+        
         <option value="Free_Plan">Free Plan</option>
+        <optgroup label="Paid plans"></optgroup>
         <option value="Tier_1">Tier 1 | $10</option>
         <option value="Tier_2">Tier 2 | $20</option>
         <option value="Tier_3">Tier 3 | $30</option>
+      </optgroup>
         <input type="checkbox" name="myProPlan" />
         <label style="display: inline" for="myProPlan">Pro plan</label>
       </select>
