--- a/Form/start.html
+++ b/Form/start.html
@@ -38,11 +38,11 @@
       <select name="myPlanSelection">
         
         <option value="Free_Plan">Free Plan</option>
-        <optgroup label="Paid plans"></optgroup>
-        <option value="Tier_1">Tier 1 | $10</option>
-        <option value="Tier_2">Tier 2 | $20</option>
-        <option value="Tier_3">Tier 3 | $30</option>
-      </optgroup>
+        <optgroup label="Paid plans">
+          <option value="Tier_1">Tier 1 | $10</option>
+          <option value="Tier_2">Tier 2 | $20</option>
+          <option value="Tier_3">Tier 3 | $30</option>
+        </optgroup>
         <input type="checkbox" name="myProPlan" />
         <label style="display: inline" for="myProPlan">Pro plan</label>
       </select>
