--- a/Validation/start.html
+++ b/Validation/start.html
@@ -45,9 +45,9 @@
       </div>
       <div>
         <label for="form-cc">Credit card number</label>
-        <input id="form-cc" name="cc" type="text" required size="16"/>
+        <input id="form-cc" name="cc" type="text" required maxlength="16"/>
         <label for="form-cvc">CVC</label>
-        <input id="form-cvc" name="cvc" type="text" required size="3"/>
+        <input id="form-cvc" name="cvc" type="text" required maxlength="3"/>
         <label for="form-exp">Expiration date</label>
         <input id="form-exp" name="exp" type="date" required/>
         <label for="form-address">Address</label>
