--- a/Card/index.html
+++ b/Card/index.html
@@ -27,14 +27,16 @@
         <tr><td>A third item</td></tr>
         <tr><td><a href="#">Card link</a><a href="#"> Another link</a></td></tr>
       </table> -->
-      <img src="#" alt="Image cap">
+      <img src="#" alt="Image cap" />
       <h3>Card title</h3>
-      <p>Some quick example text to build on the card title and make up the
-        bulk of the card's content</p>
-        <p>An item</p>
-        <p>A second item</p>
-        <p>A third item</p>
-        <p><a href="#">Card link</a><a href="#"> Another link</a></p>
+      <p>
+        Some quick example text to build on the card title and make up the bulk
+        of the card's content
+      </p>
+      <p>An item</p>
+      <p>A second item</p>
+      <p>A third item</p>
+      <p><a href="#">Card link</a><a href="#"> Another link</a></p>
     </article>
   </body>
 </html>
