--- a/Create an HTML blog page/start.html
+++ b/Create an HTML blog page/start.html
@@ -7,7 +7,26 @@
       content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
     />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>HTML Lesson</title>
+    <title>Html blog</title>
   </head>
-  <body></body>
+  <body>
+    <h1>HTML blog</h1>
+    <article style="background-image: url('./assets/hands.png');">
+      <h2>My article</h2>
+      <p>
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Expedita quam
+        sunt officia cupiditate alias voluptatibus aut blanditiis. Sunt
+        exercitationem dolor libero molestiae qui aut vero reprehenderit,
+        voluptates doloremque aliquam doloribus!
+      </p>
+    </article>
+    <form>
+      <fieldset>
+        <label for="myEmail">Email:</label>
+        <input type="email" name="myEmail" required />
+        <button>Submit</button>
+      </fieldset>
+    </form>
+    <footer>This is a footer</footer>
+  </body>
 </html>
