made article's text more readable

--- a/Create an HTML blog page/start.html
+++ b/Create an HTML blog page/start.html
@@ -11,22 +11,26 @@
   </head>
   <body>
     <h1>HTML blog</h1>
-    <article style="background-image: url('./assets/hands.png');">
+    <article style="background-image: url('./assets/hands.png')">
       <h2>My article</h2>
-      <p>
-        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Expedita quam
-        sunt officia cupiditate alias voluptatibus aut blanditiis. Sunt
-        exercitationem dolor libero molestiae qui aut vero reprehenderit,
-        voluptates doloremque aliquam doloribus!
+      <p style="background-color: rgba(250, 250, 250, 0.597)">
+        <b>
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Expedita
+          quam sunt officia cupiditate alias voluptatibus aut blanditiis. Sunt
+          exercitationem dolor libero molestiae qui aut vero reprehenderit,
+          voluptates doloremque aliquam doloribus!
+        </b>
       </p>
     </article>
     <form>
       <fieldset>
+        <legend>This is a form</legend>
         <label for="myEmail">Email:</label>
         <input type="email" name="myEmail" required />
         <button>Submit</button>
       </fieldset>
     </form>
+    <br>
     <footer>This is a footer</footer>
   </body>
 </html>
