added some style

--- a/Card/index.html
+++ b/Card/index.html
@@ -4,11 +4,15 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style/style.css">
     <title>Card test</title>
   </head>
   <body>
-    <article>
-      <img src="#" alt="Image cap" />
+    <article class="card">
+      <div class="imcap">
+        <img src="img/gbg.png" alt="Image cap" />
+      </div>
+      
       <h3>Card title</h3>
       <p>
         Some quick example text to build on the card title and make up the bulk
