--- a/Card/index.html
+++ b/Card/index.html
@@ -10,9 +10,11 @@
   <body>
     <article class="card">
       <div class="imcap">
-        <img src="img/gbg.png" alt="Image cap" />
+        <img src="img/gbg.png" alt="Image cap" id="myImg"/>
+        <span id="imcapT">Image cap</span>
       </div>
-      
+      <div class="content">
+        
       <h3>Card title</h3>
       <p>
         Some quick example text to build on the card title and make up the bulk
@@ -22,6 +24,7 @@
       <p>A second item</p>
       <p>A third item</p>
       <p><a href="#">Card link</a><a href="#"> Another link</a></p>
+      </div>
     </article>
   </body>
 </html>
