--- a/Card/index.html
+++ b/Card/index.html
@@ -4,26 +4,29 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style/style.css">
+    <link rel="stylesheet" href="style/style.css" />
     <title>Card test</title>
   </head>
   <body>
     <article class="card">
       <div class="imcap">
-        <img src="img/gbg.png" alt="Image cap" id="myImg"/>
+        <img src="img/gbg.png" alt="Image cap" id="myImg" />
         <span id="imcapT">Image cap</span>
       </div>
       <div class="content">
-        
-      <h3>Card title</h3>
-      <p>
-        Some quick example text to build on the card title and make up the bulk
-        of the card's content
-      </p>
-      <p>An item</p>
-      <p>A second item</p>
-      <p>A third item</p>
-      <p><a href="#">Card link</a><a href="#"> Another link</a></p>
+        <div>
+          <h3 id="cardTitle">Card title</h3>
+          <p>
+            Some quick example text to build on the card title and make up the
+            bulk of the card's content
+          </p>
+        </div>
+        <div><p>An item</p></div>
+        <div><p>A second item</p></div>
+        <div><p>A third item</p></div>
+        <div>
+          <p><a href="#">Card link</a><a href="#" id="link2"> Another link</a></p>
+        </div>
       </div>
     </article>
   </body>
