--- a/Flexbox/start/index.html
+++ b/Flexbox/start/index.html
@@ -7,7 +7,31 @@
       content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
     />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Oswald:wght@500&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="style.css" />
     <title>CSS Lessons</title>
   </head>
-  <body></body>
+  <body>
+    <div class="container">
+      <div class="side">
+        <div class="side_top">
+          <div class="side_item logoPh">LOGO</div>
+          <div class="side_item"><a href="#">Home</a></div>
+          <div class="side_item"><a href="#">About</a></div>
+          <div class="side_item"><a href="#">Contacts</a></div>
+          <div class="side_item"><a href="#">Legal</a></div>
+        </div>
+        <div class="side_bottom">
+          <div id="avatar" class="side_item"><img width="100px" src="avatar.svg" alt="" srcset=""></div>
+          <div id="username" class="side_item">MyUsername</div>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
