added svg avatar and picture of sidebar

--- a/Flexbox/start/index.html
+++ b/Flexbox/start/index.html
@@ -21,7 +21,7 @@
     <div class="container">
       <div class="side">
         <div class="side_top">
-          <div class="side_item logoPh">LOGO</div>
+          <div class="side_item">LOGO</div>
           <div class="side_item"><a href="#">Home</a></div>
           <div class="side_item"><a href="#">About</a></div>
           <div class="side_item"><a href="#">Contacts</a></div>
