--- a/MediaQueries/index.html
+++ b/MediaQueries/index.html
@@ -18,7 +18,7 @@
           <div class="cardName">Mario Rossi</div>
           <div class="cardDate">Lun, 13/12/2021</div>
         </div>
-        <div class="dots"></div>
+        <div class="dots">...</div>
       </div>
       <div class="cardImg">
         <img src="assets/img/cani1.jpg" alt="">
@@ -41,7 +41,7 @@
           <div class="cardName">Elis Bau</div>
           <div class="cardDate">Lun, 17/12/2021</div>
         </div>
-        <div class="dots"></div>
+        <div class="dots">...</div>
       </div>
       <div class="cardImg">
         <img src="assets/img/cani2.webp" alt="">
@@ -64,7 +64,7 @@
           <div class="cardName">Canino Piccino</div>
           <div class="cardDate">Lun, 13/01/2021</div>
         </div>
-        <div class="dots"></div>
+        <div class="dots">...</div>
       </div>
       <div class="cardImg">
         <img src="assets/img/cani3.jpg" alt="">
