changed mq max-width

--- a/MediaQueries/index.html
+++ b/MediaQueries/index.html
@@ -11,7 +11,7 @@
 
 <body>
   <div class="container">
-    <div class="card">
+    <div class="card" id="card1">
       <div class="cardHead">
         <div class="avatarFrame"></div>
         <div class="headText">
@@ -34,7 +34,7 @@
         amet ullam quisquam perferendis quis. Suscipit.
       </div>
     </div>
-    <div class="card">
+    <div class="card" id="card2">
       <div class="cardHead">
         <div class="avatarFrame"></div>
         <div class="headText">
@@ -57,7 +57,7 @@
         amet ullam quisquam perferendis quis. Suscipit.
       </div>
     </div>
-    <div class="card">
+    <div class="card" id="card3">
       <div class="cardHead">
         <div class="avatarFrame"></div>
         <div class="headText">
