--- a/sass_exercise_3-functions_modules/index.html
+++ b/sass_exercise_3-functions_modules/index.html
@@ -27,7 +27,7 @@
                     est laborum."</p>
             </article>
         </section>
-        <section>
+        <section class="footer_section">
             <article>
                 <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
                     et dolore magna aliqua."</p>
